k8s/catalogo-productos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogo-productos
  namespace: mercadourbano
spec:
  selector:
    app: catalogo-productos
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
